[package]
name = "egui_kittest_demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "egui_kittest_demo"
path = "src/main.rs"

[lib]
name = "egui_kittest_demo"
path = "src/lib.rs"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"

[dev-dependencies]
egui_kittest = "0.32.0"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
